backend_evdev: fix scaling overflow for high resolution axes

The module scales all axis values from the kernel to the range of
-32768 .. 32768, for compatibility with the old joystick kernel module.

The current implementation had an integer overflow, if the axis had a high
resolution of > 16384, like the popular XBox 360 controller.

This commitmakes the scaling use float instead to fix erratic behaviour
on high resolution joysticks. The joystick backend was not affected.

Fixes bug: https://bugs.freedesktop.org/show_bug.cgi?id=42399